--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"bot_token": "TOKEN", "admin_ids": ["5588464519"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"5588464519": 8769900}}
+{"bot_token": "7496657009:AAHJcJyEsl5bxiBVPufjkB-yW6i4eKb3tXE", "admin_ids": ["1286345600"], "user_file": "users.json", "log_file": "log.txt", "cooldown_time": 300, "admin_balances": {"1286345600": 8769900}}
